package vn.edu.fpt.model;

public class TourCategory {
}
